Remove mock data fallback

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     </header>
 
     <main class="main">
+      <div id="error-banner" class="error-banner"></div>
       <section id="route-home" class="route is-active" data-route="home">
         <div class="hero">
           <div class="hero-text">
