Make analyzer nav use current ticker

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <span class="word">Value Check</span>
       </div>
       <nav class="nav">
-        <a href="#/analyzer/BRK.B">Analyzer</a>
+        <a href="#/analyzer" id="nav-analyzer">Analyzer</a>
         <a href="#/methodology">Methodology</a>
         <a href="#/support">Support</a>
       </nav>
