Add company name search and suggestions

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
               makes uncertainty explicit.
             </p>
             <div class="search">
-              <input id="ticker-input" placeholder="Enter ticker (e.g., BRK.B)" />
+              <input id="ticker-input" placeholder="Ticker or company (e.g., BRK.B or Berkshire)" />
               <button id="ticker-go">Analyze</button>
+              <div id="search-suggestions" class="suggestions"></div>
             </div>
             <div class="status">US stocks only · Daily refresh · No login required</div>
           </div>
