Improve analyzer header and snapshots

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="page-head">
           <div>
             <h2 id="analyzer-title">Analyzer</h2>
-            <p class="muted">Last updated: <span id="analyzer-updated">—</span></p>
+            <p class="muted" id="analyzer-meta">Last updated: —</p>
           </div>
           <div class="score-card">
             <div class="label">Value Check Final Score</div>
