Add loading state and improve fundamentals

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
 
     <main class="main">
       <div id="error-banner" class="error-banner"></div>
+      <div id="loading-overlay" class="loading-overlay">
+        <div class="spinner"></div>
+        <div class="loading-text">Loading analysis…</div>
+      </div>
       <section id="route-home" class="route is-active" data-route="home">
         <div class="hero">
           <div class="hero-text">
