Add annual/quarterly toggle and provenance sources

--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
             <div class="score" id="final-score">—</div>
             <div class="verdict" id="final-verdict">—</div>
           </div>
+          <div class="period-toggle" id="period-toggle">
+            <button class="toggle-btn" data-period="annual">Annual</button>
+            <button class="toggle-btn" data-period="quarterly">Quarterly</button>
+          </div>
         </div>
 
         <div class="grid two">
