Add peer compare suggestions

--- a/index.html
+++ b/index.html
@@ -115,6 +115,15 @@
             <button class="primary" id="to-valuation">View Fair Value</button>
           </div>
         </div>
+
+        <div id="peer-bar" class="peer-bar">
+          <div class="peer-label">
+            <span class="muted">Compare</span>
+            <strong id="peer-base">AAPL</strong>
+            <span class="muted">vs peers</span>
+          </div>
+          <div id="peer-chips" class="peer-chips"></div>
+        </div>
       </section>
 
       <section id="route-compare" class="route" data-route="compare">
