--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <body>
     <div class="backdrop"></div>
     <header class="site-header">
-      <div class="brand">
+      <a class="brand" href="#/" id="nav-home">
         <span class="mark"></span>
         <span class="word">Value Check</span>
-      </div>
+      </a>
       <nav class="nav">
         <a href="#/analyzer" id="nav-analyzer">Analyzer</a>
         <a href="#/compare" id="nav-compare">Compare</a>
