Add moat signals summary panels

--- a/index.html
+++ b/index.html
@@ -124,6 +124,14 @@
           </div>
           <div id="peer-chips" class="peer-chips"></div>
         </div>
+
+        <div class="panel" id="moat-panel">
+          <div class="panel-head">
+            <h3>Moat Signals Summary</h3>
+            <span class="muted">Auto-generated from fundamentals</span>
+          </div>
+          <div id="moat-summary" class="moat-summary"></div>
+        </div>
       </section>
 
       <section id="route-compare" class="route" data-route="compare">
