--- a/index.html
+++ b/index.html
@@ -106,13 +106,16 @@
             <div id="checklist-table" class="table"></div>
           </div>
 
-          <div class="panel">
+          <div class="panel snapshot-panel">
             <div class="panel-head">
               <h3>Snapshots</h3>
               <span class="muted">Quick readouts</span>
             </div>
             <div class="snapshot-grid" id="snapshot-grid"></div>
-            <button class="primary" id="to-valuation">View Fair Value</button>
+            <div class="snapshot-actions">
+              <button class="primary" id="to-valuation">View Fair Value</button>
+              <p class="snapshot-hint">Use fair value to compare market price vs intrinsic range.</p>
+            </div>
           </div>
         </div>
 
