--- a/index.html
+++ b/index.html
@@ -97,43 +97,47 @@
           </div>
         </div>
 
-        <div class="grid two">
-          <div class="panel">
-            <div class="panel-head">
-              <h3>Checklist</h3>
-              <span class="muted">10 signals · pass/fail</span>
+        <div class="analyzer-grid">
+          <div class="analyzer-col">
+            <div class="panel">
+              <div class="panel-head">
+                <h3>Checklist</h3>
+                <span class="muted">10 signals · pass/fail</span>
+              </div>
+              <div id="checklist-table" class="table"></div>
             </div>
-            <div id="checklist-table" class="table"></div>
-          </div>
 
-          <div class="panel snapshot-panel">
-            <div class="panel-head">
-              <h3>Snapshots</h3>
-              <span class="muted">Quick readouts</span>
-            </div>
-            <div class="snapshot-grid" id="snapshot-grid"></div>
-            <div class="snapshot-actions">
-              <button class="primary" id="to-valuation">View Fair Value</button>
-              <p class="snapshot-hint">Use fair value to compare market price vs intrinsic range.</p>
+            <div class="panel" id="moat-panel">
+              <div class="panel-head">
+                <h3>Moat Signals Summary</h3>
+                <span class="muted">Auto-generated from fundamentals</span>
+              </div>
+              <div id="moat-summary" class="moat-summary"></div>
             </div>
           </div>
-        </div>
 
-        <div id="peer-bar" class="peer-bar">
-          <div class="peer-label">
-            <span class="muted">Compare</span>
-            <strong id="peer-base">AAPL</strong>
-            <span class="muted">vs peers</span>
-          </div>
-          <div id="peer-chips" class="peer-chips"></div>
-        </div>
+          <div class="analyzer-col">
+            <div class="panel snapshot-panel">
+              <div class="panel-head">
+                <h3>Snapshots</h3>
+                <span class="muted">Quick readouts</span>
+              </div>
+              <div class="snapshot-grid" id="snapshot-grid"></div>
+              <div class="snapshot-actions">
+                <button class="primary" id="to-valuation">View Fair Value</button>
+                <p class="snapshot-hint">Use fair value to compare market price vs intrinsic range.</p>
+              </div>
+            </div>
 
-        <div class="panel" id="moat-panel">
-          <div class="panel-head">
-            <h3>Moat Signals Summary</h3>
-            <span class="muted">Auto-generated from fundamentals</span>
+            <div id="peer-bar" class="peer-bar">
+              <div class="peer-label">
+                <span class="muted">Compare</span>
+                <strong id="peer-base">AAPL</strong>
+                <span class="muted">vs peers</span>
+              </div>
+              <div id="peer-chips" class="peer-chips"></div>
+            </div>
           </div>
-          <div id="moat-summary" class="moat-summary"></div>
         </div>
       </section>
 
