Compact analyzer layout for above-the-fold view

--- a/index.html
+++ b/index.html
@@ -106,14 +106,6 @@
               </div>
               <div id="checklist-table" class="table"></div>
             </div>
-
-            <div class="panel" id="moat-panel">
-              <div class="panel-head">
-                <h3>Moat Signals Summary</h3>
-                <span class="muted">Auto-generated from fundamentals</span>
-              </div>
-              <div id="moat-summary" class="moat-summary"></div>
-            </div>
           </div>
 
           <div class="analyzer-col">
@@ -136,6 +128,16 @@
                 <span class="muted">vs peers</span>
               </div>
               <div id="peer-chips" class="peer-chips"></div>
+            </div>
+          </div>
+
+          <div class="analyzer-col">
+            <div class="panel" id="moat-panel">
+              <div class="panel-head">
+                <h3>Moat Signals Summary</h3>
+                <span class="muted">Auto-generated from fundamentals</span>
+              </div>
+              <div id="moat-summary" class="moat-summary"></div>
             </div>
           </div>
         </div>
