Simplify analyzer layout and compact moat text

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               <div class="snapshot-grid" id="snapshot-grid"></div>
               <div class="snapshot-actions">
                 <button class="primary" id="to-valuation">View Fair Value</button>
-                <p class="snapshot-hint">Use fair value to compare market price vs intrinsic range.</p>
+                <p class="snapshot-hint">Compare market price vs intrinsic range.</p>
               </div>
             </div>
 
@@ -129,15 +129,13 @@
               </div>
               <div id="peer-chips" class="peer-chips"></div>
             </div>
-          </div>
 
-          <div class="analyzer-col">
-            <div class="panel" id="moat-panel">
+            <div class="panel moat-panel" id="moat-panel">
               <div class="panel-head">
-                <h3>Moat Signals Summary</h3>
-                <span class="muted">Auto-generated from fundamentals</span>
+                <h3>Moat Signals</h3>
+                <span class="muted">Auto-generated</span>
               </div>
-              <div id="moat-summary" class="moat-summary"></div>
+              <div id="moat-summary" class="moat-summary compact"></div>
             </div>
           </div>
         </div>
