Simplify moat copy and improve readability

--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
                 <h3>Moat Signals</h3>
                 <span class="muted">Auto-generated</span>
               </div>
-              <div id="moat-summary" class="moat-summary compact"></div>
+              <p class="panel-subtitle">Short explanations based on margins, leverage, capital intensity, and buybacks.</p>
+              <div id="moat-summary" class="moat-summary"></div>
             </div>
           </div>
         </div>
