Move moat section to top and render horizontal cards

--- a/index.html
+++ b/index.html
@@ -97,6 +97,15 @@
           </div>
         </div>
 
+        <div class="panel moat-panel" id="moat-panel">
+          <div class="panel-head">
+            <h3>Moat Signals</h3>
+            <span class="muted">Auto-generated</span>
+          </div>
+          <p class="panel-subtitle">One-line moat read on pricing power, capital intensity, balance-sheet risk, solvency, and buybacks.</p>
+          <div id="moat-summary" class="moat-summary moat-row"></div>
+        </div>
+
         <div class="analyzer-grid">
           <div class="analyzer-col">
             <div class="panel">
@@ -128,15 +137,6 @@
                 <span class="muted">vs peers</span>
               </div>
               <div id="peer-chips" class="peer-chips"></div>
-            </div>
-
-            <div class="panel moat-panel" id="moat-panel">
-              <div class="panel-head">
-                <h3>Moat Signals</h3>
-                <span class="muted">Auto-generated</span>
-              </div>
-              <p class="panel-subtitle">Short explanations based on margins, leverage, capital intensity, and buybacks.</p>
-              <div id="moat-summary" class="moat-summary"></div>
             </div>
           </div>
         </div>
