Convert checklist to two-column factor matrix

--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
           <div class="analyzer-col">
             <div class="panel">
               <div class="panel-head">
-                <h3>Checklist</h3>
-                <span class="muted">10 signals · pass/fail</span>
+                <h3>Quality Factor Matrix</h3>
+                <span class="muted">10 fundamental tests</span>
               </div>
               <div id="checklist-table" class="table"></div>
             </div>
