Redesign methodology page with clear value-investing framework

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </a>
       <nav class="nav">
         <a href="#/analyzer" id="nav-analyzer">Analyzer</a>
-        <a href="#/compare" id="nav-compare">Compare</a>
+        <a href="#/compare" id="nav-compare">Battle</a>
         <a href="#/methodology">Methodology</a>
         <a href="#/support">Support</a>
       </nav>
@@ -226,41 +226,155 @@
       </section>
 
       <section id="route-methodology" class="route" data-route="methodology">
-        <div class="page-head">
-          <div>
-            <h2>Methodology</h2>
-            <p class="muted">Clear, plain‑English rules behind every score.</p>
+        <div class="method-shell">
+          <div class="method-main">
+            <section class="panel method-intro">
+              <h2>Signal vs. Noise.</h2>
+              <p>
+                Don't get distracted by too much data. Our algorithms isolate the few critical metrics that
+                actually determine a business's long-term durability, filtering out the noise to focus purely on quality.
+              </p>
+            </section>
+
+            <section class="panel method-section">
+              <h3>1. Profitability &amp; Pricing Power</h3>
+              <div class="method-metrics">
+                <article class="method-metric">
+                  <h4>Gross Margin &gt; 40%</h4>
+                  <p>
+                    High gross margins indicate pricing power. If a company can mark up its goods significantly,
+                    it likely has a brand moat rather than a commodity product.
+                  </p>
+                </article>
+                <article class="method-metric">
+                  <h4>Net Margin &gt; 20%</h4>
+                  <p>
+                    This measures the bottom line. A company that keeps more than 20 cents of every dollar of revenue
+                    is highly efficient and likely dominates its niche.
+                  </p>
+                </article>
+                <article class="method-metric">
+                  <h4>Return on Equity &gt; 15%</h4>
+                  <p>
+                    ROE measures how efficiently management uses shareholder capital.
+                    Consistently high ROE is the hallmark of a compounder.
+                  </p>
+                </article>
+              </div>
+            </section>
+
+            <section class="panel method-section">
+              <h3>2. Operational Discipline</h3>
+              <div class="method-metrics">
+                <article class="method-metric">
+                  <h4>SG&amp;A &lt; 30%</h4>
+                  <p>
+                    Selling, General, and Admin costs should stay low. If a company must spend heavily on sales and
+                    marketing to maintain demand, its moat is weaker.
+                  </p>
+                </article>
+                <article class="method-metric">
+                  <h4>R&amp;D Reliance &lt; 30%</h4>
+                  <p>
+                    We prefer companies that do not need constant reinvention just to survive.
+                    High R&amp;D dependence can indicate intense competition.
+                  </p>
+                </article>
+                <article class="method-metric">
+                  <h4>Capex Efficiency &lt; 50%</h4>
+                  <p>
+                    Great businesses do not require heavy capital expenditure to grow.
+                    We look for companies that can maintain operations using less than half of earnings.
+                  </p>
+                </article>
+              </div>
+            </section>
+
+            <section class="panel method-section">
+              <h3>3. Solvency &amp; Safety</h3>
+              <div class="method-metrics">
+                <article class="method-metric">
+                  <h4>Debt / Equity &lt; 0.5</h4>
+                  <p>
+                    We avoid high leverage. A ratio under 0.5 suggests the business is primarily funded by retained
+                    profits, not by borrowing.
+                  </p>
+                </article>
+                <article class="method-metric">
+                  <h4>Interest Coverage &gt; 6x</h4>
+                  <p>
+                    We require operating income to be at least 6 times interest expense, creating a margin of safety
+                    during weak cycles.
+                  </p>
+                </article>
+                <article class="method-metric">
+                  <h4>Consistent Earnings</h4>
+                  <p>
+                    We want at least a 5-year track record of positive earnings to avoid story stocks that rely on
+                    future promises.
+                  </p>
+                </article>
+              </div>
+            </section>
+
+            <section class="panel method-section">
+              <h3>4. Capital Allocation</h3>
+              <div class="method-metrics method-metrics--single">
+                <article class="method-metric">
+                  <h4>The "$1" Retained Earnings Test</h4>
+                  <p>
+                    For every $1 of earnings management keeps, long-term market value should increase by at least $1.
+                    If it does not, shareholders would likely be better served by distributions.
+                  </p>
+                  <blockquote>
+                    "We test the wisdom of retaining earnings by assessing whether retention delivers at least $1
+                    of market value for each $1 retained." - Warren Buffett
+                  </blockquote>
+                </article>
+              </div>
+            </section>
           </div>
+
+          <aside class="method-side">
+            <section class="panel method-side-panel">
+              <h3>Recommended Reading</h3>
+              <div class="book-list">
+                <article class="book-item">
+                  <div class="book-meta">
+                    <h4>The Intelligent Investor</h4>
+                    <p>Benjamin Graham</p>
+                  </div>
+                </article>
+                <article class="book-item">
+                  <div class="book-meta">
+                    <h4>The Snowball</h4>
+                    <p>Alice Schroeder</p>
+                  </div>
+                </article>
+              </div>
+              <p class="muted legal-note">
+                As an Amazon Associate, this site may earn from qualifying purchases made through affiliate links.
+              </p>
+            </section>
+
+            <section class="panel method-side-panel">
+              <h3>Support the Project</h3>
+              <p>Hosting costs around $20/month. If this tool helped you, consider supporting development.</p>
+              <button class="primary">Buy me a coffee</button>
+            </section>
+          </aside>
         </div>
-        <div class="grid two">
-          <div class="panel">
-            <h3>Checklist Signals</h3>
-            <ul class="plain">
-              <li><strong>Gross Margin &gt; 40%</strong> — pricing power.</li>
-              <li><strong>SG&amp;A Efficiency &lt; 30%</strong> — lean overhead.</li>
-              <li><strong>R&amp;D Reliance &lt; 30%</strong> — balanced innovation spend.</li>
-              <li><strong>Net Margin &gt; 20%</strong> — real profitability.</li>
-              <li><strong>Consistent Earnings</strong> — profitable most years (5–10).</li>
-              <li><strong>Interest Coverage &gt; 6x</strong> — debt is easily serviced.</li>
-              <li><strong>Debt / Equity &lt; 0.5</strong> — conservative leverage.</li>
-              <li><strong>ROE &gt; 15%</strong> — strong shareholder returns.</li>
-              <li><strong>Capex Efficiency &lt; 50%</strong> — cash not eaten by capex.</li>
-              <li><strong>$1 Test &gt; 1.0</strong> — $1 retained creates &gt; $1 value.</li>
-            </ul>
-          </div>
-          <div class="panel">
-            <h3>How to Read It</h3>
-            <ul class="plain">
-              <li><strong>Signals only count when data exists.</strong> Missing values show “No data” and do not fail.</li>
-              <li><strong>Score = passes / available signals.</strong> Example: 6/8 means two signals had no data.</li>
-              <li><strong>Verdicts:</strong> Strong (8+), Mixed (5–7), Weak (&lt;5).</li>
-              <li><strong>Sources:</strong> SEC XBRL for fundamentals, FMP for price/market cap.</li>
-              <li><strong>Refresh:</strong> Cached daily (24h). US stocks only.</li>
-              <li><strong>Compare:</strong> Highlights which stock wins per metric.</li>
-              <li><span class="muted">Educational only. Not investment advice.</span></li>
-            </ul>
-          </div>
-        </div>
+
+        <section class="panel method-disclaimer">
+          <p>
+            <strong>Disclaimer:</strong> This application is for educational and informational purposes only.
+            It does not constitute financial advice, investment recommendations, or an offer to buy or sell securities.
+          </p>
+          <p>
+            Financial data is sourced from free providers and may contain inaccuracies. Always conduct your own due diligence and
+            consult a certified financial advisor before making investment decisions.
+          </p>
+        </section>
       </section>
 
       <section id="route-support" class="route" data-route="support">
@@ -280,8 +394,8 @@
     </main>
 
     <footer class="footer">
-      <div>Value Check · Data refreshed daily</div>
-      <div>Not financial advice</div>
+      <div>ValueCheck · Institutional-grade automated due diligence.</div>
+      <div>© 2026 ValueCheck · Not affiliated with Berkshire Hathaway.</div>
     </footer>
 
     <script>
