Refactor methodology to one-column layout with bottom support CTA

--- a/index.html
+++ b/index.html
@@ -334,35 +334,6 @@
               </div>
             </section>
           </div>
-
-          <aside class="method-side">
-            <section class="panel method-side-panel">
-              <h3>Recommended Reading</h3>
-              <div class="book-list">
-                <article class="book-item">
-                  <div class="book-meta">
-                    <h4>The Intelligent Investor</h4>
-                    <p>Benjamin Graham</p>
-                  </div>
-                </article>
-                <article class="book-item">
-                  <div class="book-meta">
-                    <h4>The Snowball</h4>
-                    <p>Alice Schroeder</p>
-                  </div>
-                </article>
-              </div>
-              <p class="muted legal-note">
-                As an Amazon Associate, this site may earn from qualifying purchases made through affiliate links.
-              </p>
-            </section>
-
-            <section class="panel method-side-panel">
-              <h3>Support the Project</h3>
-              <p>Hosting costs around $20/month. If this tool helped you, consider supporting development.</p>
-              <button class="primary">Buy me a coffee</button>
-            </section>
-          </aside>
         </div>
 
         <section class="panel method-disclaimer">
@@ -374,6 +345,21 @@
             Financial data is sourced from free providers and may contain inaccuracies. Always conduct your own due diligence and
             consult a certified financial advisor before making investment decisions.
           </p>
+        </section>
+
+        <section class="panel method-support">
+          <div class="method-support-copy">
+            <h3>Support the Project</h3>
+            <p>Hosting costs around $20/month. If this tool helped you, consider supporting development.</p>
+          </div>
+          <a
+            class="primary method-support-button"
+            href="https://buymeacoffee.com/piyush.kumar"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            Buy me a coffee
+          </a>
         </section>
       </section>
 
