Add filing delta panel with new filing flag and metric changes

--- a/index.html
+++ b/index.html
@@ -106,6 +106,16 @@
           <div id="moat-summary" class="moat-summary moat-row"></div>
         </div>
 
+        <div class="panel filing-panel" id="filing-panel">
+          <div class="panel-head">
+            <h3>Filing Delta</h3>
+            <span class="muted" id="filing-status">Waiting for filing data</span>
+          </div>
+          <p class="panel-subtitle" id="filing-subtitle">Latest 10-K/10-Q changes vs previous filing.</p>
+          <div class="filing-meta" id="filing-meta"></div>
+          <div class="filing-grid" id="filing-deltas"></div>
+        </div>
+
         <div class="analyzer-grid">
           <div class="analyzer-col">
             <div class="panel">
